<resources>
    <string name="app_name">DogApp</string>
    <string name="save_appointment">Guardar Cita</string>
    <string name="alert_symptom_required">Selecciona un síntoma</string>
    <string name="placeholder_symptom">Síntomas</string>
    <string name="hint_telephone">Teléfono</string>
    <string name="hint_name_owner">Nombre del propietario</string>
    <string name="hint_breed">Raza</string>
    <string name="hint_pet_name">Nombre de la mascota</string>
    <string name="new_appointment">Nueva Cita</string>
    <string name="edit_appointment">Editar Cita</string>
    <string name="edit">Editar cita</string>
    <string name="delete">Editar cita</string>
</resources>